--- a/api-service-pay/pom.xml
+++ b/api-service-pay/pom.xml
@@ -5,11 +5,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>api-common</artifactId>
+	<artifactId>api-service-pay</artifactId>
 	<packaging>jar</packaging>
 
-	<name>api-common</name>
-	<description>通用模块</description>
+	<name>api-service-pay</name>
+	<description>服务-交易</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
@@ -21,7 +21,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
@@ -30,5 +38,21 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId><!-- Spring Boot打包工具 -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal><!-- 将依赖打包到生成的包里面 -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
