--- a/api-registry/src/main/resources/application.properties
+++ b/api-registry/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=210${system.sn}
+server.port=${system.type}${system.sn}
 spring.profiles.active=develop
 spring.application.name=API-REGISTRY
 eureka.instance.prefer-ip-address=true
