--- a/api-service-pay/src/main/resources/application.properties
+++ b/api-service-pay/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=310${system.sn}
+server.port=${system.type}${system.sn}
 spring.profiles.active=develop
 spring.application.name=api-service-pay
 eureka.instance.prefer-ip-address=true
