--- a/api-service/api-service-admin/src/main/resources/application.properties
+++ b/api-service/api-service-admin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${system.type}${system.sn}
 spring.profiles.active=develop
-spring.application.name=api-admin
+spring.application.name=api-service-admin
 eureka.instance.prefer-ip-address=true
 logging.config=classpath:logback-spring.xml
 #注册中心
