--- a/api-service/api-service-admin/src/main/resources/application.properties
+++ b/api-service/api-service-admin/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.freemarker.settings.time_format=HH:mm:ss
 spring.freemarker.settings.date_format=yyyy-MM-dd
 spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
 spring.freemarker.settings.classic_compatible=true
+#启用shutdown
+management.endpoint.shutdown.enabled=true
+#暴露端点
+management.endpoints.web.exposure.include=*
+#turbine配置
+turbine.app-config=api-service-admin,api-service-order,api-service-www
+#使用host和port区分服务，默认使用host区分
+turbine.combine-host-port=true
+turbine.cluster-name-expression="default"
