--- a/api-service/api-service-order/pom.xml
+++ b/api-service/api-service-order/pom.xml
@@ -33,6 +33,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
@@ -47,11 +51,12 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId><!-- Spring Boot打包工具 -->
+				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<goals>
-							<goal>repackage</goal><!-- 将依赖打包到生成的包里面 -->
+							<!-- 将依赖打包到生成的包里面 -->
+							<goal>repackage</goal>
 						</goals>
 					</execution>
 				</executions>
