--- a/api-service/api-service-www/pom.xml
+++ b/api-service/api-service-www/pom.xml
@@ -28,7 +28,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -50,7 +58,8 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>repackage</goal><!-- 将依赖打包到生成的包里面 -->
+							<!-- 将依赖打包到生成的包里面 -->
+							<goal>repackage</goal>
 						</goals>
 					</execution>
 				</executions>
