--- a/api-service/api-service-www/src/main/resources/application.properties
+++ b/api-service/api-service-www/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.freemarker.settings.time_format=HH:mm:ss
 spring.freemarker.settings.date_format=yyyy-MM-dd
 spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
 spring.freemarker.settings.classic_compatible=true
+#暴露端点
+management.endpoints.web.exposure.include=hystrix.stream
