--- a/api-service/api-service-www/src/main/resources/application.properties
+++ b/api-service/api-service-www/src/main/resources/application.properties
@@ -13,3 +13,6 @@ feign.hystrix.enabled=ture
 spring.freemarker.settings.classic_compatible=true
 #暴露端点
 management.endpoints.web.exposure.include=hystrix.stream
+#redis
+spring.redis.host=192.168.1.242
+spring.redis.port=6379
