静态资源，统一异常处理

--- a/api-gateway/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/application.properties
@@ -14,6 +14,9 @@ zuul.routes.order.strip-prefix=false
 zuul.routes.user.path=/gateway/api/user/**
 zuul.routes.user.service-id=api-service-user
 zuul.routes.user.strip-prefix=false
+zuul.routes.resources.path=/resources/**
+zuul.routes.resources.service-id=api-service-resources
+zuul.routes.resources.strip-prefix=false
 zuul.routes.www.path=/**
 zuul.routes.www.service-id=api-service-www
 zuul.routes.www.strip-prefix=false
