--- a/api-service/api-service-resources/src/main/resources/application-develop.properties
+++ b/api-service/api-service-resources/src/main/resources/application-develop.properties
@@ -1,4 +1,5 @@
 #中文配置需要编码
 system.sn=10
-system.type=340
+system.type=342
 system.name=${spring.application.name}
+system.static.base=http://localhost:23010
