--- a/api-service/api-service-www/src/main/resources/application.properties
+++ b/api-service/api-service-www/src/main/resources/application.properties
@@ -10,7 +10,9 @@ eureka.instance.instance-id=${spring.application.name}:${server.port}
 #开启熔断器
 feign.hystrix.enabled=ture
 #freemarker配置
+#spring.freemarker.cache=true
 spring.freemarker.settings.classic_compatible=true
+spring.freemarker.prefer-file-system-access=false
 #暴露端点
 management.endpoints.web.exposure.include=hystrix.stream
 #redis
