--- a/api-service/api-service-order/src/main/resources/application.properties
+++ b/api-service/api-service-order/src/main/resources/application.properties
@@ -8,10 +8,10 @@ eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/,http://127.0.0.1:21011/eureka/
 #实例名称
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-#服务续约心跳时间
-eureka.instance.lease-renewal-interval-in-seconds=30
-#定义服务失效时间
-eureka.instance.lease-expiration-duration-in-seconds=90
+#freemarker配置
+#spring.freemarker.cache=true
+spring.freemarker.settings.classic_compatible=true
+spring.freemarker.prefer-file-system-access=false
 #启用shutdown
 management.endpoint.shutdown.enabled=true
 #暴露端点
