--- a/api-service/api-service-resources/src/main/resources/application.properties
+++ b/api-service/api-service-resources/src/main/resources/application.properties
@@ -7,9 +7,9 @@ logging.config=classpath:logback-spring.xml
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #实例名称
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-#开启熔断器
-feign.hystrix.enabled=ture
 #freemarker配置
+#spring.freemarker.cache=true
 spring.freemarker.settings.classic_compatible=true
+spring.freemarker.prefer-file-system-access=false
 #暴露端点
-management.endpoints.web.exposure.include=hystrix.stream
+management.endpoints.web.exposure.include=*
