--- a/api-gateway/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/application.properties
@@ -20,6 +20,9 @@ zuul.routes.resources.strip-prefix=false
 zuul.routes.www.path=/**
 zuul.routes.www.service-id=api-service-www
 zuul.routes.www.strip-prefix=false
+zuul.routes.www.sensitive-headers=*
+#调整信号量
+zuul.semaphore.max-semaphores=2000
 #统一添加版本
 #zuul.prefix=/V1
 #重试
