--- a/api-common/api-common/pom.xml
+++ b/api-common/api-common/pom.xml
@@ -29,8 +29,8 @@
 		</dependency>
 		<!-- 数据库映射 -->
 		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
 		</dependency>
 	</dependencies>
 
