--- a/api-service/api-service-order/src/main/resources/application.properties
+++ b/api-service/api-service-order/src/main/resources/application.properties
@@ -16,3 +16,17 @@ spring.freemarker.prefer-file-system-access=false
 management.endpoint.shutdown.enabled=true
 #暴露端点
 management.endpoints.web.exposure.include=*
+#数据库基本配置
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_api?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#JPA数据库名
+spring.jpa.database=MYSQL
+#显示后台处理的SQL语句
+spring.jpa.show-sql=true
+#自动检查实体和数据库表是否一致，如果不一致则会进行更新数据库表
+spring.jpa.hibernate.ddl-auto=update
+#使用连接池
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
