--- a/api-service/api-service-www/pom.xml
+++ b/api-service/api-service-www/pom.xml
@@ -20,6 +20,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
+			<artifactId>api-common-user-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.acgist</groupId>
 			<artifactId>api-common-order-impl</artifactId>
 		</dependency>
 		<dependency>
