--- a/api-gateway/api-gateway-service/pom.xml
+++ b/api-gateway/api-gateway-service/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-gateway-service</name>
-	<description>服务网关</description>
+	<description>网关-服务</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
