--- a/api-service/api-service-order/pom.xml
+++ b/api-service/api-service-order/pom.xml
@@ -20,16 +20,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.mchange</groupId>
-			<artifactId>c3p0</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.acgist</groupId>
+			<artifactId>api-common-order</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common-order</artifactId>
+			<artifactId>api-common-data</artifactId>
 		</dependency>
 		<!--
 		<dependency>
@@ -44,10 +40,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
