--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>api-registry</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-service-www</module>
+		<module>api-service/api-service-gateway</module>
 		<module>api-service/api-service-admin</module>
 		<module>api-service/api-service-user</module>
 		<module>api-service/api-service-order</module>
