--- a/api-gateway/api-gateway-service/pom.xml
+++ b/api-gateway/api-gateway-service/pom.xml
@@ -21,7 +21,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common</artifactId>
+			<artifactId>api-common-user</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.acgist</groupId>
+			<artifactId>api-common-order</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
