--- a/api-gateway/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/application.properties
@@ -8,9 +8,9 @@ eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #实例名称
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 #路由规则，service-id使用负载均衡，直接使用url直接访问不使用负载均衡
-zuul.routes.gateway.path=/gateway/api/**
-zuul.routes.gateway.service-id=api-service-gateway
-zuul.routes.gateway.strip-prefix=false
+zuul.routes.order.path=/gateway/api/order/**
+zuul.routes.order.service-id=api-service-order
+zuul.routes.order.strip-prefix=false
 zuul.routes.resources.path=/resources/**
 zuul.routes.resources.service-id=api-service-resources
 zuul.routes.resources.strip-prefix=false
@@ -25,9 +25,9 @@ zuul.semaphore.max-semaphores=2000
 #重试
 #zuul.retryable=false
 #超时配置
-feign.client.config.default.readTimeout=4000
-feign.client.config.default.connectTimeout=2000
-ribbon.ReadTimeout=4000
-ribbon.ConnectTimeout=2000
-hystrix.threadpool.default.coreSize=1000
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=12000
+#feign.client.config.default.readTimeout=4000
+#feign.client.config.default.connectTimeout=2000
+#ribbon.ReadTimeout=4000
+#ribbon.ConnectTimeout=2000
+#hystrix.threadpool.default.coreSize=1000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=12000
