--- a/api-service/api-service-gateway/pom.xml
+++ b/api-service/api-service-gateway/pom.xml
@@ -21,11 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common-user-impl</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.acgist</groupId>
-			<artifactId>api-common-order-impl</artifactId>
+			<artifactId>api-common</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
