--- a/api-service/api-service-gateway/src/main/resources/application.properties
+++ b/api-service/api-service-gateway/src/main/resources/application.properties
@@ -14,11 +14,4 @@ feign.hystrix.enabled=ture
 spring.freemarker.settings.classic_compatible=true
 spring.freemarker.prefer-file-system-access=false
 #暴露端点
-management.endpoints.web.exposure.include=hystrix.stream
-#超时配置
-feign.client.config.default.readTimeout=4000
-feign.client.config.default.connectTimeout=2000
-ribbon.ReadTimeout=4000
-ribbon.ConnectTimeout=2000
-hystrix.threadpool.default.coreSize=1000
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=12000
+management.endpoints.web.exposure.include=*
