--- a/api-gateway/api-gateway-service/src/main/resources/application-develop.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/application-develop.properties
@@ -1,4 +1,5 @@
 #中文配置需要编码
 system.sn=10
-system.type=230
+system.type=240
 system.name=${spring.application.name}
+system.static.base=http://localhost:25010
