--- a/api-gateway/api-gateway-www/src/main/resources/application.properties
+++ b/api-gateway/api-gateway-www/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${system.type}${system.sn}
 spring.profiles.active=develop
-spring.application.name=api-gateway-service
+spring.application.name=api-gateway-www
 eureka.instance.prefer-ip-address=true
 logging.config=classpath:logback-spring.xml
 #注册中心
@@ -8,9 +8,13 @@ eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #实例名称
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 #路由规则，service-id使用负载均衡，直接使用url直接访问不使用负载均衡
-zuul.routes.order.path=/gateway/api/order/**
-zuul.routes.order.service-id=api-service-order
-zuul.routes.order.strip-prefix=false
+zuul.routes.resources.path=/resources/**
+zuul.routes.resources.service-id=api-service-resources
+zuul.routes.resources.strip-prefix=false
+zuul.routes.www.path=/**
+zuul.routes.www.service-id=api-service-www
+zuul.routes.www.strip-prefix=false
+zuul.routes.www.sensitive-headers=*
 #调整信号量
 zuul.semaphore.max-semaphores=2000
 #统一添加版本
