--- a/api-service/api-service-order/src/main/resources/application.properties
+++ b/api-service/api-service-order/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=*
 #数据库基本配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_api?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #JPA数据库名
 spring.jpa.database=MYSQL
