--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-user-impl</module>
 		<module>api-registry</module>
+		<module>api-gateway/api-gateway-www</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-service-www</module>
 		<module>api-service/api-service-gateway</module>
