--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-.classpath
 .project
 .settings
+.classpath
+.factorypath
 .springBeans
+.apt_generated
+.apt_generated_tests
 
 **/logs/
 **/target/
