--- a/api-common/api-common-order-impl/pom.xml
+++ b/api-common/api-common-order-impl/pom.xml
@@ -28,12 +28,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-		<!--
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+			<optional>true</optional>
 		</dependency>
-		-->
 	</dependencies>
 
 </project>
