--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,14 @@
 	<description>maven</description>
 
 	<modules>
+		<module>api-config</module>
+		<module>api-registry</module>
 		<module>api-common/api-common</module>
 		<module>api-common/api-common-data</module>
 		<module>api-common/api-common-order</module>
 		<module>api-common/api-common-order-impl</module>
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-user-impl</module>
-		<module>api-registry</module>
 		<module>api-gateway/api-gateway-www</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-service-www</module>
