--- a/api-gateway/api-gateway-service/src/main/resources/bootstrap.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/bootstrap.properties
@@ -5,4 +5,8 @@ spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,zuul
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,zuul,stream
+
+spring.cloud.stream.bindings.gateway.binder=rabbit
+spring.cloud.stream.bindings.gateway.group=api-gateway-message
+spring.cloud.stream.bindings.gateway.destination=api-gateway-message
