--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>api-common/api-common-order-impl</module>
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-user-impl</module>
+		<module>api-common/api-common-gateway</module>
 		<module>api-gateway/api-gateway-www</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-service-www</module>
