--- a/api-common/api-common-order/pom.xml
+++ b/api-common/api-common-order/pom.xml
@@ -23,6 +23,12 @@
 			<groupId>com.acgist</groupId>
 			<artifactId>api-common</artifactId>
 		</dependency>
+		<!-- JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- feign -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
