--- a/api-service/api-service-order/pom.xml
+++ b/api-service/api-service-order/pom.xml
@@ -24,16 +24,16 @@
 			<artifactId>api-common-order</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.acgist</groupId>
-			<artifactId>api-common-data</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
