--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,16 @@
 		<module>api-config</module>
 		<module>api-registry</module>
 		<module>api-common/api-common</module>
-		<module>api-common/api-common-data</module>
-		<module>api-common/api-common-order</module>
 		<module>api-common/api-common-user</module>
+		<module>api-common/api-common-order</module>
 		<module>api-common/api-common-gateway</module>
 		<module>api-gateway/api-gateway-www</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-service-www</module>
-		<module>api-service/api-service-gateway</module>
 		<module>api-service/api-service-admin</module>
 		<module>api-service/api-service-user</module>
 		<module>api-service/api-service-order</module>
+		<module>api-service/api-service-gateway</module>
 		<module>api-service/api-service-resources</module>
 	</modules>
 
@@ -54,30 +53,15 @@
 	<dependencies>
 		<!-- JAVA 10被移除模块 -->
 		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-			<version>${jaxb-runtime.version}</version>
-		</dependency>
-		<!-- JAVA 10被移除模块 -->
-		<dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>${activation.version}</version>
 		</dependency>
+		<!-- JAVA 10被移除模块 -->
 		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>${commons-beanutils.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${commons-lang3.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>${commons-codec.version}</version>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>${jaxb-runtime.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -90,17 +74,7 @@
 			</dependency>
 			<dependency>
 				<groupId>com.acgist</groupId>
-				<artifactId>api-common-data</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.acgist</groupId>
 				<artifactId>api-common-order</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.acgist</groupId>
-				<artifactId>api-common-order-impl</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -109,9 +83,29 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.acgist</groupId>
-				<artifactId>api-common-user-impl</artifactId>
-				<version>${project.version}</version>
+				<groupId>javax.activation</groupId>
+				<artifactId>activation</artifactId>
+				<version>${activation.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>${jaxb-runtime.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons-codec.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons-beanutils.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.mchange</groupId>
@@ -123,6 +117,7 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql-connector-java.version}</version>
 			</dependency>
+			
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
