--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -6,3 +6,6 @@ zuul.routes.order.strip-prefix=false
 #zuul.prefix=/V1
 #是否重试
 #zuul.retryable=false
+#网关消息
+spring.cloud.stream.bindings.gateway_sender.binder=rabbit
+spring.cloud.stream.bindings.gateway_sender.destination=${system.gateway.message.stream}
