--- a/api-config/src/main/resources/config/main/api-service-gateway.properties
+++ b/api-config/src/main/resources/config/main/api-service-gateway.properties
@@ -2,3 +2,7 @@
 management.endpoint.shutdown.enabled=true
 #暴露端点
 management.endpoints.web.exposure.include=*
+#网关消息
+spring.cloud.stream.bindings.gateway_receiver.binder=rabbit
+spring.cloud.stream.bindings.gateway_receiver.destination=${system.gateway.message.stream}
+spring.cloud.stream.bindings.gateway_receiver.group=${spring.application.name}
