--- a/api-config/src/main/resources/config/common/system.properties
+++ b/api-config/src/main/resources/config/common/system.properties
@@ -3,3 +3,5 @@
 system.name=${spring.application.name}
 #静态资源地址
 system.static.base=http://localhost:25010
+#网关消息
+system.gateway.message.stream=api-gateway-message
