--- a/api-gateway/api-gateway-service/pom.xml
+++ b/api-gateway/api-gateway-service/pom.xml
@@ -28,6 +28,10 @@
 			<artifactId>api-common-order</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.acgist</groupId>
+			<artifactId>api-common-gateway</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
