--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 	<properties>
 		<java.version>10</java.version>
 		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
+		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<c3p0.version>0.9.5.2</c3p0.version>
