--- a/api-config/src/main/resources/config/main/api-service-admin.properties
+++ b/api-config/src/main/resources/config/main/api-service-admin.properties
@@ -5,7 +5,15 @@ management.endpoint.shutdown.enabled=true
 #暴露端点
 management.endpoints.web.exposure.include=*
 #turbine配置
-turbine.app-config=api-service-order,api-service-user
+turbine.app-config=api-service-www,api-gateway-service
 #使用host和port区分服务，默认使用host区分
 turbine.combine-host-port=true
 turbine.cluster-name-expression="default"
+#防止zipkin进入首页异常
+management.metrics.web.server.auto-time-requests=false
+
+zipkin.collector.http.enabled=false
+zipkin.collector.rabbitmq.address=localhost:5672
+zipkin.collector.rabbitmq.username=guest
+zipkin.collector.rabbitmq.password=guest
+zipkin.collector.rabbitmq.queue=api-sleuth
