--- a/api-config/src/main/resources/config/main/api-service-www.properties
+++ b/api-config/src/main/resources/config/main/api-service-www.properties
@@ -4,3 +4,17 @@ feign.hystrix.enabled=ture
 management.endpoint.shutdown.enabled=true
 #暴露端点
 management.endpoints.web.exposure.include=*
+#超时配置
+ribbon.ReadTimeout=4000
+ribbon.ConnectTimeout=2000
+ribbon.MaxAutoRetries=0
+ribbon.MaxAutoRetriesNextServer=0
+#熔断时间，必须大于等于ribbon超时时间（重试），默认（HystrixCommandProperties）：1000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+
+spring.zipkin.sender.type=rabbit
+#采集数量
+spring.sleuth.http.enabled=false
+spring.sleuth.messaging.rabbit.enabled=true
+spring.sleuth.sampler.probability=1.0
+spring.sleuth.messaging.rabbit.remote-service-name=api-sleuth
