--- a/api-config/src/main/resources/config/common/zuul.properties
+++ b/api-config/src/main/resources/config/common/zuul.properties
@@ -2,9 +2,12 @@
 #调整信号量
 zuul.semaphore.max-semaphores=2000
 #超时配置
+ribbon.ReadTimeout=4000
+ribbon.ConnectTimeout=2000
+ribbon.MaxAutoRetries=0
+ribbon.MaxAutoRetriesNextServer=0
 #feign.client.config.default.readTimeout=4000
 #feign.client.config.default.connectTimeout=2000
-#ribbon.ReadTimeout=4000
-#ribbon.ConnectTimeout=2000
 #hystrix.threadpool.default.coreSize=1000
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=12000
+#熔断时间，必须大于等于ribbon超时时间（重试），默认（HystrixCommandProperties）：1000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
