--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -1,3 +1,7 @@
+#启用shutdown
+management.endpoint.shutdown.enabled=true
+#暴露端点
+management.endpoints.web.exposure.include=*
 #路由规则
 zuul.routes.order.path=/gateway/api/order/**
 zuul.routes.order.service-id=api-service-order
