--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<c3p0.version>0.9.5.2</c3p0.version>
+		<zipkin.version>2.11.7</zipkin.version>
 		<activation.version>1.1.1</activation.version>
 		<commons-lang3.version>3.8</commons-lang3.version>
 		<commons-codec.version>1.11</commons-codec.version>
@@ -123,7 +124,16 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql-connector-java.version}</version>
 			</dependency>
-			
+			<dependency>
+			    <groupId>io.zipkin.java</groupId>
+			    <artifactId>zipkin-server</artifactId>
+			    <version>${zipkin.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>io.zipkin.java</groupId>
+			    <artifactId>zipkin-autoconfigure-ui</artifactId>
+			    <version>${zipkin.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
