--- a/api-config/src/main/resources/config/main/api-service-admin.properties
+++ b/api-config/src/main/resources/config/main/api-service-admin.properties
@@ -11,9 +11,10 @@ turbine.combine-host-port=true
 turbine.cluster-name-expression="default"
 #防止zipkin进入首页异常
 management.metrics.web.server.auto-time-requests=false
-
+#zipkin收集器配置
 zipkin.collector.http.enabled=false
-zipkin.collector.rabbitmq.address=localhost:5672
-zipkin.collector.rabbitmq.username=guest
-zipkin.collector.rabbitmq.password=guest
-zipkin.collector.rabbitmq.queue=api-sleuth
+zipkin.collector.rabbitmq.addresses=${spring.rabbitmq.addresses}
+zipkin.collector.rabbitmq.username=${spring.rabbitmq.username}
+zipkin.collector.rabbitmq.password=${spring.rabbitmq.password}
+zipkin.collector.rabbitmq.virtual-host=${spring.rabbitmq.virtual-host}
+zipkin.collector.rabbitmq.queue=${system.message.zipkin}
