--- a/api-config/src/main/resources/config/common/stream.properties
+++ b/api-config/src/main/resources/config/common/stream.properties
@@ -1,7 +1,15 @@
+#默认配置
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.addresses=${spring.rabbitmq.host}:${spring.rabbitmq.port}
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+#stream绑定
 spring.cloud.stream.binders.rabbit.type=rabbit
-spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.host=localhost
-spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.port=5672
-spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.username=guest
-spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.password=guest
-spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.virtual-host=/
+spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.host=${spring.rabbitmq.host}
+spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.port=${spring.rabbitmq.port}
+spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.username=${spring.rabbitmq.username}
+spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.password=${spring.rabbitmq.password}
+spring.cloud.stream.binders.rabbit.environment.spring.rabbitmq.virtual-host=${spring.rabbitmq.virtual-host}
 spring.cloud.stream.default-binder=rabbit
