--- a/api-config/src/main/resources/config/common/system.properties
+++ b/api-config/src/main/resources/config/common/system.properties
@@ -1,7 +1,11 @@
-#系统配置
 #系统名称
+#系统配置
 system.name=${spring.application.name}
 #静态资源地址
 system.static.base=http://localhost:25010
-#网关消息
-system.gateway.message.stream=api-gateway-message
+#bus消息（交换机）
+system.message.bus=api.bus
+#网关消息（交换机）
+system.message.gateway=api.message.gateway
+#zipkin消息（队列名）
+system.message.zipkin=api-zipkin
