--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -11,5 +11,5 @@ zuul.routes.order.strip-prefix=false
 #是否重试
 #zuul.retryable=false
 #网关消息
-spring.cloud.stream.bindings.gateway_sender.binder=rabbit
-spring.cloud.stream.bindings.gateway_sender.destination=${system.gateway.message.stream}
+spring.cloud.stream.bindings.api_message_gateway_sender.binder=rabbit
+spring.cloud.stream.bindings.api_message_gateway_sender.destination=${system.message.gateway}
