--- a/api-config/src/main/resources/config/main/api-service-www.properties
+++ b/api-config/src/main/resources/config/main/api-service-www.properties
@@ -11,10 +11,12 @@ ribbon.MaxAutoRetries=0
 ribbon.MaxAutoRetriesNextServer=0
 #熔断时间，必须大于等于ribbon超时时间（重试），默认（HystrixCommandProperties）：1000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
-
+#zipkin传送器
 spring.zipkin.sender.type=rabbit
-#采集数量
-spring.sleuth.http.enabled=false
-spring.sleuth.messaging.rabbit.enabled=true
+spring.zipkin.rabbitmq.queue=${system.message.zipkin}
+#sleuth配置
 spring.sleuth.sampler.probability=1.0
-spring.sleuth.messaging.rabbit.remote-service-name=api-sleuth
+spring.sleuth.http.enabled=false
+spring.sleuth.messaging.kafka.enabled=false
+spring.sleuth.messaging.rabbit.enabled=true
+#spring.sleuth.messaging.rabbit.remote-service-name=api-sleuth
