--- a/api-config/src/main/resources/config/main/api-service-admin.properties
+++ b/api-config/src/main/resources/config/main/api-service-admin.properties
@@ -1,17 +1,12 @@
-#开启熔断器
-feign.hystrix.enabled=ture
-#启用shutdown
+#启用shutdown端点
 management.endpoint.shutdown.enabled=true
-#暴露端点
+#公开所有端点
 management.endpoints.web.exposure.include=*
 #turbine配置
-turbine.app-config=api-service-www,api-gateway-service
-#使用host和port区分服务，默认使用host区分
-turbine.combine-host-port=true
-turbine.cluster-name-expression="default"
+turbine.stream.destination=${system.message.turbine}
 #防止zipkin进入首页异常
 management.metrics.web.server.auto-time-requests=false
-#zipkin收集器配置
+#zipkin收集器
 zipkin.collector.http.enabled=false
 zipkin.collector.rabbitmq.addresses=${spring.rabbitmq.addresses}
 zipkin.collector.rabbitmq.username=${spring.rabbitmq.username}
