--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -4,8 +4,10 @@ system.name=${spring.application.name}
 #静态资源地址
 system.static.base=http://localhost:25010
 #bus消息（交换机）
-system.message.bus=api.bus
+system.message.bus=api.message.bus
 #网关消息（交换机）
 system.message.gateway=api.message.gateway
+#hystrix消息（交换机）
+system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
 system.message.zipkin=api-zipkin
