--- a/api-common/api-common-gateway/pom.xml
+++ b/api-common/api-common-gateway/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-common-gateway</name>
-	<description>通用模块-网关信息</description>
+	<description>通用模块-网关服务</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
