--- a/api-common/api-common-user/pom.xml
+++ b/api-common/api-common-user/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-common-user</name>
-	<description>通用模块-用户</description>
+	<description>通用模块-用户服务</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
@@ -24,8 +24,8 @@
 			<artifactId>api-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
