--- a/api-config/src/main/resources/application.properties
+++ b/api-config/src/main/resources/application.properties
@@ -7,5 +7,5 @@ logging.config=classpath:logback-spring.xml
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #实例名称
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-#配置中心：main（项目主目录）、common（通用配置）、system（切面配置）+
+#配置中心：main（项目主目录）、common（通用配置）、system（切面配置）
 spring.cloud.config.server.native.search-locations=classpath:/config/common/,classpath:/config/main/,classpath:/config/system/
