--- a/api-config/src/main/resources/config/common/data.properties
+++ b/api-config/src/main/resources/config/common/data.properties
@@ -2,12 +2,12 @@
 #数据库基本配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_api?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.password=
+#spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #JPA数据库名
 spring.jpa.database=MYSQL
-#显示执行的SQL语句
+#显示执行的SQL
 spring.jpa.show-sql=false
 #自动检查实体和数据库表是否一致，如果不一致则会进行更新数据库表
 spring.jpa.hibernate.ddl-auto=update
