--- a/api-config/src/main/resources/config/main/api-gateway-www.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-www.properties
@@ -1,6 +1,6 @@
-#启用shutdown
+#启用shutdown端点
 management.endpoint.shutdown.enabled=true
-#暴露端点
+#公开所有端点
 management.endpoints.web.exposure.include=*
 #路由规则
 zuul.routes.resources.path=/resources/**
