--- a/api-service/api-service-user/src/main/resources/bootstrap.properties
+++ b/api-service/api-service-user/src/main/resources/bootstrap.properties
@@ -5,4 +5,4 @@ spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,data,c3p0,stream,bus
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,data,c3p0,bus,zipkin
