--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -1,7 +1,7 @@
 #启用shutdown端点
-management.endpoint.shutdown.enabled=true
+management.endpoint.shutdown.enabled=false
 #公开所有端点
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #路由规则
 zuul.routes.order.path=/gateway/api/order/**
 zuul.routes.order.service-id=api-service-order
