项目模块调整

--- a/api-config/src/main/resources/config/common/web.properties
+++ b/api-config/src/main/resources/config/common/web.properties
@@ -1,5 +1,10 @@
 #服务配置
 #服务端口号
 server.port=${system.type}${system.sn}
-#session name
+#session cookie name
 server.session.cookie.name=ACGISTID
+#代理服务器获取客户端信息
+server.use-forward-headers=true
+server.tomcat.port-header=x-forwarded-port
+server.tomcat.protocol-header=x-forwarded-proto
+server.tomcat.remote-ip-header=x-forwarded-for
