--- a/api-config/src/main/resources/config/common/data.properties
+++ b/api-config/src/main/resources/config/common/data.properties
@@ -5,12 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#JPA数据库名
+#JPA数据库配置
 spring.jpa.database=MYSQL
-#显示执行的SQL
 spring.jpa.show-sql=false
-#自动检查实体和数据库表是否一致，如果不一致则会进行更新数据库表
-spring.jpa.hibernate.ddl-auto=update
-#使用连接池
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+#配置不使用JDBC链接，使用连接池
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
