--- a/api-config/src/main/resources/config/common/feign.properties
+++ b/api-config/src/main/resources/config/common/feign.properties
@@ -1,4 +1,4 @@
-#feign配置
+#feign配置，没有自动提示
 #开启熔断器
 feign.hystrix.enabled=ture
 #超时配置
@@ -6,5 +6,8 @@ ribbon.ReadTimeout=4000
 ribbon.ConnectTimeout=2000
 ribbon.MaxAutoRetries=0
 ribbon.MaxAutoRetriesNextServer=0
+#feign超时
+#feign.client.config.default.readTimeout=4000
+#feign.client.config.default.connectTimeout=2000
 #熔断时间，必须大于等于ribbon超时时间（重试），默认（HystrixCommandProperties）：1000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
