--- a/api-config/src/main/resources/config/common/web.properties
+++ b/api-config/src/main/resources/config/common/web.properties
@@ -1,14 +1,14 @@
 #服务配置
 #服务端口号
 server.port=${system.type}${system.sn}
-#session cookie name
-server.session.cookie.name=ACGISTID
-#代理服务器获取客户端信息
+#tomcat配置：代理、线程、编码
 server.use-forward-headers=true
 server.tomcat.port-header=x-forwarded-port
 server.tomcat.protocol-header=x-forwarded-proto
 server.tomcat.remote-ip-header=x-forwarded-for
-
-#server.session.cookie.http-only=true
-#server.tomcat.uriEncoding=UTF-8
-#server.tomcat.maxThreads=2000
+server.tomcat.max-threads=1000
+server.tomcat.accept-count=200
+server.tomcat.uri-encoding=UTF-8
+#cookie设置
+server.servlet.session.cookie.name=ACGISTID
+server.servlet.session.cookie.http-only=true
