网关不路由端点

--- a/api-config/src/main/resources/config/common/zuul.properties
+++ b/api-config/src/main/resources/config/common/zuul.properties
@@ -5,6 +5,8 @@ zuul.semaphore.max-semaphores=1000
 zuul.host.max-total-connections=1000
 #每个路由最大连接
 zuul.host.max-per-route-connections=500
+#禁止路由端点
+zuul.ignored-patterns=/actuator/**
 #超时配置
 ribbon.ReadTimeout=4000
 ribbon.ConnectTimeout=2000
