--- a/api-config/src/main/resources/config/main/api-www-admin.properties
+++ b/api-config/src/main/resources/config/main/api-www-admin.properties
@@ -13,3 +13,5 @@ zipkin.collector.rabbitmq.username=${spring.rabbitmq.username}
 zipkin.collector.rabbitmq.password=${spring.rabbitmq.password}
 zipkin.collector.rabbitmq.virtual-host=${spring.rabbitmq.virtual-host}
 zipkin.collector.rabbitmq.queue=${system.message.zipkin}
+#关闭hystrix.stream端点
+management.endpoint.hystrix.stream.enabled=false
