缓存服务器

--- a/api-config/src/main/resources/config/common/zuul.properties
+++ b/api-config/src/main/resources/config/common/zuul.properties
@@ -15,3 +15,10 @@ ribbon.MaxAutoRetriesNextServer=0
 #hystrix.threadpool.default.coreSize=1000
 #熔断时间，必须大于等于ribbon超时时间（重试），默认（HystrixCommandProperties）：1000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+#以下配置请单独配置
+#客户端请求头过滤
+#zuul.sensitive-headers=
+#服务之间请求头（请求和响应）过滤
+#zuul.ignored-headers=
+#Spring Security是否过滤请求头
+#zuul.ignore-security-headers=
