--- a/api-config/src/main/resources/config/main/api-gateway-admin.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-admin.properties
@@ -3,7 +3,9 @@ management.endpoint.shutdown.enabled=true
 #公开所有端点
 management.endpoints.web.exposure.include=*
 #路由规则
-zuul.routes.www.path=/**
-zuul.routes.www.service-id=api-www-admin
-zuul.routes.www.strip-prefix=false
-zuul.routes.www.sensitive-headers=*
+#后台网站
+zuul.routes.admin.path=/**
+zuul.routes.admin.service-id=api-www-admin
+zuul.routes.admin.strip-prefix=false
+zuul.routes.admin.sensitive-headers=
+zuul.ignore-security-headers=false
