--- a/api-config/src/main/resources/config/main/api-gateway-www.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-www.properties
@@ -3,10 +3,14 @@ management.endpoint.shutdown.enabled=true
 #公开所有端点
 management.endpoints.web.exposure.include=*
 #路由规则
+#静态资源
 zuul.routes.resources.path=/resources/**
 zuul.routes.resources.service-id=api-www-resources
 zuul.routes.resources.strip-prefix=false
+#前台网站
 zuul.routes.www.path=/**
 zuul.routes.www.service-id=api-www
 zuul.routes.www.strip-prefix=false
-zuul.routes.www.sensitive-headers=*
+#设置cookie等身份敏感信息，如果需要路由到外部服务请不要这样设置，防止身份信息泄露
+zuul.routes.www.sensitive-headers=
+zuul.ignore-security-headers=false
