后台：   端点：关闭应用   管理员列表、删除管理员

--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -2,7 +2,8 @@
 #系统配置
 system.name=${spring.application.name}
 #静态资源地址
-system.static.base=http://localhost:28010
+#system.static.base=http://localhost:28010
+system.static.base=http://localhost:38050
 #bus消息（交换机）
 system.message.bus=api.message.bus
 #网关消息（交换机）
