--- a/api-config/src/main/resources/config/system/api-www-admin-system.properties
+++ b/api-config/src/main/resources/config/system/api-www-admin-system.properties
@@ -3,4 +3,4 @@ system.sn=80
 #系统类型
 system.type=380
 #不需要鉴权的地址
-system.security.allow.attributes=/login,/logout,/error,/actuator/**,/resources/**
+system.security.allow.attributes=/login,/logout,/error,/favicon.ico,/actuator/**,/resources/**
